# crew-ai-for-questions-app

./: Makefile  pyproject.toml
app/: urls.py
app/app/: settings.py  urls.py
app/management/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/management/migrations/: 0001_initial.py  0002_user_stripecustomerid_user_stripepriceid_and_more.py
app/questions/: admin.py  models.py
app/questions/management/commands/: add_universities.py
app/questions/migrations/: 0001_initial.py  0002_alter_question_question.py  0003_alter_question_wrong_answer_1_and_more.py  0004_alter_question_wrong_answer_1_and_more.py  0005_subject_alter_question_subject.py  0006_question_revision.py  0007_question_image.py  0008_alter_question_correct_answer.py  0009_question_resolution.py  0010_alter_subject_color.py  0011_university_alter_question_revision.py  0012_alter_question_university.py  0013_phases.py  0014_alter_phases_difficulty_alter_question_difficulty.py
app/subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
app/subscriptions/management/commands/: add_plans.py  add_products.py
app/subscriptions/migrations/: 0001_initial.py  0002_subscription.py  0003_products_next_due_date_products_stripe_price_id_and_more.py  0004_remove_products_next_due_date_and_more.py  0005_transaction.py
app/utils/crew/: agents.py  crew.py  tasks.py
